CSS fix for button alignment

--- a/styles/pages/revisions.less
+++ b/styles/pages/revisions.less
@@ -202,15 +202,15 @@ main.revisions {
   .meta_actions {
     float: right;
     margin-right: 0;
+    padding-right: 15px;
 
-    button:first-child {
-      margin-right: .25rem;
+    button {
+      margin-left: .25rem;
     }
     .trash_button, .edit_button {
       display: inline-block;
       float: none;
     }
-
     .mirror {
       transform: scale(-1,1);
       pointer-events: all;
